# dtu_mlops2

./: .gitignore
.dvc/: config
MNIST/: Makefile  README.md  pyproject.toml  requirements.txt  trained_model2.pth
MNIST/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
MNIST/docs/: mkdocs.yaml
MNIST/docs/source/: index.md
MNIST/project_mnist/: __init__.py  data.dvc  data_solution.py  predict_model.py  train_model.py  trained_model.pth  visualize.py
MNIST/project_mnist/data/: make_dataset.py
MNIST/project_mnist/data/processed/: train_target.pt
MNIST/project_mnist/models/: model.py  trained_model.pth
